--- a/services.html
+++ b/services.html
@@ -26,14 +26,15 @@
             <div class="flex justify-between items-center h-16">
                 <div class="text-xl sm:text-2xl md:text-3xl font-bold text-teal-700 font-poppins">Stefan Trajkovski</div>
                 <div class="hidden md:flex space-x-20 font-poppins">
-                    <a href="index.html" class="text-gray-600 relative group text-lg">
+                    <a href="index.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Home
                         <span class="absolute bottom-0 left-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                         <span class="absolute bottom-0 right-1/2 w-0 h-0.5 bg-teal-600 group-hover:w-1/2 transition-all duration-300 origin-center"></span>
                     </a>
-                    <a href="services.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
+                    <a href="services.html" class="text-gray-900 relative group text-lg">
                         Services
-                        <span class="absolute bottom-0 left-0 w-full h-0.5 bg-teal-600"></span>
+                        <span class="absolute bottom-0 left-1/2 w-1/2 h-0.5 bg-teal-600 transition-all duration-300 origin-center"></span>
+                        <span class="absolute bottom-0 right-1/2 w-1/2 h-0.5 bg-teal-600 transition-all duration-300 origin-center"></span>
                     </a>
                     <a href="projects.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Projects
