--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         body {
             font-family: 'Poppins', sans-serif;
         }
+        /* cSpell:disable */
         .gradient-text {
             background: linear-gradient(120deg, #0d9488, #0f766e);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        /* cSpell:enable */
         .animate-float {
             animation: float 6s ease-in-out infinite;
         }
@@ -76,9 +78,10 @@
             <div class="flex justify-between items-center h-16">
                 <div class="text-xl sm:text-2xl md:text-3xl font-bold text-teal-700 font-poppins">Stefan Trajkovski</div>
                 <div class="hidden md:flex space-x-20 font-poppins">
-                    <a href="index.html" class="text-gray-600 relative group text-lg">
+                    <a href="index.html" class="text-gray-900 relative group text-lg">
                         Home
-                        <span class="absolute bottom-0 left-0 w-full h-0.5 bg-teal-600"></span>
+                        <span class="absolute bottom-0 left-1/2 w-1/2 h-0.5 bg-teal-600 transition-all duration-300 origin-center"></span>
+                        <span class="absolute bottom-0 right-1/2 w-1/2 h-0.5 bg-teal-600 transition-all duration-300 origin-center"></span>
                     </a>
                     <a href="services.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Services
