fixed moving nav bar on project, deleted svg, replaced them with font awesome, fixed links to linkedin, added footer to all pages

--- a/index.html
+++ b/index.html
@@ -246,17 +246,17 @@
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-4 text-center">
             <div class="flex justify-center space-x-6 mb-4">
-                <a href="#" class="text-gray-400 hover:text-white transition-colors duration-300">
+                <a href="https://github.com/StefanTrajkovskii" target="_blank" class="text-gray-400 hover:text-white transition-colors duration-300">
                     <i class="fab fa-github text-2xl"></i>
                 </a>
-                <a href="#" class="text-gray-400 hover:text-white transition-colors duration-300">
+                <a href="https://www.linkedin.com/in/stefan-trajkovski-430b9830a/" target="_blank" class="text-gray-400 hover:text-white transition-colors duration-300">
                     <i class="fab fa-linkedin text-2xl"></i>
                 </a>
                 <a href="#" class="text-gray-400 hover:text-white transition-colors duration-300">
                     <i class="fab fa-twitter text-2xl"></i>
                 </a>
             </div>
-            <p class="text-gray-400"> 2024 Stefan Trajkovski. All rights reserved.</p>
+            <p class="text-gray-400">&copy; 2024 Stefan Trajkovski. All rights reserved.</p>
         </div>
     </footer>
     
