--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <title>Contact - Stefan Trajkovski</title>
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="tailwind.config.js"></script>
     <script src="js/main.js" defer></script>
@@ -113,16 +115,16 @@
                         <h3 class="text-lg font-semibold text-gray-800 mb-4">Follow Me</h3>
                         <div class="flex space-x-4">
                             <a href="https://www.facebook.com/stefan.trajkovski.98/" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
-                                <img src="assets/svg/social/facebook.svg" alt="Facebook" class="w-6 h-6">
+                                <i class="fab fa-facebook text-2xl text-gray-600"></i>
                             </a>
-                            <a href="#" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
-                                <img src="assets/svg/social/twitter.svg" alt="Twitter" class="w-6 h-6">
+                            <a href="https://github.com/StefanTrajkovskii" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
+                                <i class="fab fa-github text-2xl text-gray-600"></i>
                             </a>
                             <a href="https://www.instagram.com/trajkovski____/" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
-                                <img src="assets/svg/social/instagram.svg" alt="Instagram" class="w-6 h-6">
+                                <i class="fab fa-instagram text-2xl text-gray-600"></i>
                             </a>
-                            <a href="https://www.linkedin.com/in/stefan-trajkovski-a60190341/" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
-                                <img src="assets/svg/social/linkedin.svg" alt="LinkedIn" class="w-6 h-6">
+                            <a href="https://www.linkedin.com/in/stefan-trajkovski-430b9830a/" target="_blank" class="w-12 h-12 bg-gray-100 rounded-lg flex items-center justify-center hover:bg-teal-100 transition-colors duration-300">
+                                <i class="fab fa-linkedin text-2xl text-gray-600"></i>
                             </a>
                         </div>
                     </div>
@@ -192,6 +194,27 @@
         </div>
     </main>
 
+
+    <!--Footer-->
+    <footer class="bg-gray-800 text-white py-8">
+        <div class="container mx-auto px-4 text-center">
+            <div class="flex justify-center space-x-6 mb-4">
+                <a href="https://github.com/StefanTrajkovskii" target="_blank" class="text-gray-400 hover:text-white transition-colors duration-300">
+                    <i class="fab fa-github text-2xl"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/stefan-trajkovski-430b9830a/" target="_blank" class="text-gray-400 hover:text-white transition-colors duration-300">
+                    <i class="fab fa-linkedin text-2xl"></i>
+                </a>
+                <a href="#" class="text-gray-400 hover:text-white transition-colors duration-300">
+                    <i class="fab fa-twitter text-2xl"></i>
+                </a>
+            </div>
+            <p class="text-gray-400">&copy; 2024 Stefan Trajkovski. All rights reserved.</p>
+        </div>
+    </footer>
+
+
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
         (function() {
@@ -199,5 +222,6 @@
         })();
     </script>
     <script src="js/contact.js"></script>
+
 </body>
 </html>
