--- a/services.html
+++ b/services.html
@@ -19,12 +19,14 @@
     </style>
     <script src="js/main.js" defer></script>
 </head>
-<body class="bg-[#F8F7F1]">
+<body class="bg-[#F8F7F1] overflow-x-hidden">
     <!-- Navbar -->
     <nav class="fixed w-full bg-[#F8F7F1] shadow-sm z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
-                <div class="text-xl sm:text-2xl md:text-3xl font-bold text-teal-700 font-poppins">Stefan Trajkovski</div>
+                <div class="text-xl sm:text-2xl md:text-3xl font-bold text-teal-700 font-poppins">
+                    <a href="index.html">Stefan Trajkovski</a>
+                </div>
                 <div class="hidden md:flex space-x-20 font-poppins">
                     <a href="index.html" class="text-gray-600 hover:text-gray-900 relative group text-lg">
                         Home
