--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="overflow-x-hidden">
+<html lang="en" class="md:overflow-visible overflow-x-hidden">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,10 +71,10 @@
         }
     </style>
 </head>
-<body class="bg-[#F8F7F1] overflow-x-hidden w-screen">
+<body class="bg-[#F8F7F1] md:overflow-visible overflow-x-hidden w-screen">
     <!-- Navbar -->
     <nav class="fixed w-full bg-[#F8F7F1] shadow-sm z-50">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 overflow-x-hidden">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 md:overflow-visible overflow-x-hidden">
             <div class="flex justify-between items-center h-16">
                 <a href="index.html" class="text-xl sm:text-2xl md:text-3xl font-bold text-teal-700 font-poppins">Stefan Trajkovski</a>
                 <div class="hidden md:flex space-x-20 font-poppins">
@@ -130,7 +130,7 @@
 
     <!-- Hero Section -->
     <main class="pt-16">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 overflow-x-hidden">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 md:overflow-visible overflow-x-hidden">
             <div class="min-h-screen flex flex-col items-center justify-center py-20">
                 <!-- Hero Content -->
                 <div class="w-full max-w-6xl mx-auto">
