make animation for Trajkovski to be typed out

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="tailwind.config.js"></script>
+    <script src="js/typing-animation.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
@@ -145,9 +146,12 @@
                             <div class="grid md:grid-cols-2 gap-12 items-center">
                                 <!-- Text Content -->
                                 <div class="space-y-8">
-                                    <h1 class="text-4xl md:text-6xl font-bold">
-                                        <span class="gradient-text">Hello, I'm Stefan</span>
-                                        <span class="typing-cursor bg-teal-600">|</span>
+                                    <h1 class="text-4xl md:text-5xl font-bold typing-container">
+                                        <div class="gradient-text">Hello, I'm</div>
+                                        <div>
+                                            <span class="gradient-text">Stefan </span>
+                                            <span class="typing-cursor bg-teal-600">|</span>
+                                        </div>
                                     </h1>
                                     <div class="space-y-4">
                                         <p class="text-xl md:text-2xl text-gray-600">Full Stack Developer</p>
