--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
                                             </svg>
                                         </a>
-                                        <a href="contact.html" class="group inline-flex items-center px-3 py-2 md:px-6 md:py-3 rounded-full border-2 border-teal-600 text-teal-600 hover:bg-teal-600 hover:text-white transition-all duration-300">
-                                            <span class="mr-2 text-sm md:text-base whitespace-nowrap">Contact Me</span>
-                                            <svg class="w-4 h-4 md:w-5 md:h-5 opacity-0 group-hover:opacity-100 transform -translate-x-3 group-hover:translate-x-0 transition-all duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+                                        <a href="contact.html" class="group relative flex items-center justify-center gap-2 px-8 py-2 md:px-10 md:py-3 rounded-full border-2 border-teal-600 text-teal-600 hover:bg-teal-600 hover:text-white transition-all duration-300">
+                                            <span class="transform group-hover:-translate-x-2 transition-transform duration-300 text-sm md:text-base">Contact Me</span>
+                                            <svg class="w-4 h-4 md:w-5 md:h-5 absolute right-5 transform translate-x-4 opacity-0 group-hover:translate-x-0 group-hover:opacity-100 transition-all duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                                             </svg>
                                         </a>
                                     </div>
