--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                     </h1>
                                     <div class="space-y-4">
                                         <p class="text-xl md:text-2xl text-gray-600">Full Stack Developer</p>
-                                        <p class="text-gray-600">Transforming ideas into elegant digital solutions with modern web technologies.</p>
+                                        <p class="text-gray-600">Transforming ideas into digital solutions with modern web technologies.</p>
                                     </div>
                                     <div class="flex flex-row gap-4 justify-center md:justify-start">
                                         <a href="projects.html" class="group inline-flex items-center px-3 py-2 md:px-6 md:py-3 rounded-full bg-teal-600 text-white hover:bg-teal-700 transition-all duration-300">
