--- a/projects.html
+++ b/projects.html
@@ -253,10 +253,14 @@
                     mobileMenu.classList.remove('opacity-0', 'scale-95');
                     mobileMenu.classList.add('opacity-100', 'scale-100');
                 }, 10);
+                // Add animation class to button
+                mobileMenuButton.classList.add('mobile-menu-open');
             } else {
                 // Close menu
                 mobileMenu.classList.remove('opacity-100', 'scale-100');
                 mobileMenu.classList.add('opacity-0', 'scale-95');
+                // Remove animation class from button
+                mobileMenuButton.classList.remove('mobile-menu-open');
                 // Wait for animation to finish before hiding
                 setTimeout(() => {
                     mobileMenu.classList.add('hidden');
@@ -271,6 +275,8 @@
                 // Close menu with animation
                 mobileMenu.classList.remove('opacity-100', 'scale-100');
                 mobileMenu.classList.add('opacity-0', 'scale-95');
+                // Remove animation class from button
+                mobileMenuButton.classList.remove('mobile-menu-open');
                 setTimeout(() => {
                     mobileMenu.classList.add('hidden');
                 }, 300);
@@ -283,6 +289,8 @@
                 isMenuOpen = false;
                 mobileMenu.classList.add('hidden', 'opacity-0', 'scale-95');
                 mobileMenu.classList.remove('opacity-100', 'scale-100');
+                // Remove animation class from button
+                mobileMenuButton.classList.remove('mobile-menu-open');
             }
         });
     </script>
