--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
         <!-- Mobile menu -->
         <div id="mobile-menu" class="hidden transform transition-all duration-300 ease-in-out opacity-0 scale-95 bg-[#F8F7F1] shadow-lg absolute w-full">
             <div class="px-2 pt-2 pb-3 space-y-3 flex flex-col items-center">
-                <a href="index.html" class="block px-3 py-2 text-gray-600 font-medium hover:text-gray-900 text-center w-full">Home</a>
-                <a href="services.html" class="block px-3 py-2 text-gray-600 font-medium hover:text-gray-900 text-center w-full">Services</a>
-                <a href="projects.html" class="block px-3 py-2 text-gray-600 font-medium hover:text-gray-900 text-center w-full">Projects</a>
-                <a href="contact.html" class="block px-3 py-2 text-gray-600 font-medium hover:text-gray-900 text-center w-full">Contact</a>
+                <a href="index.html" class="block px-3 py-2 text-gray-600 font-medium hover:text-gray-900 text-center w-full whitespace-nowrap">Home</a>
+                <a href="services.html" class="block px-3 py-2 text-gray-600 font-medium hover:text-gray-900 text-center w-full whitespace-nowrap">Services</a>
+                <a href="projects.html" class="block px-3 py-2 text-gray-600 font-medium hover:text-gray-900 text-center w-full whitespace-nowrap">Projects</a>
+                <a href="contact.html" class="block px-3 py-2 text-gray-600 font-medium hover:text-gray-900 text-center w-full whitespace-nowrap">Contact</a>
                 <div class="px-3 py-2 w-full">
-                    <button class="bg-teal-600 text-white w-full max-w-[200px] mx-auto px-4 py-1.5 text-sm rounded-md hover:bg-teal-700 font-poppins block">
+                    <button class="bg-teal-600 text-white w-full max-w-[200px] mx-auto px-4 py-1.5 text-sm rounded-md hover:bg-teal-700 font-poppins block whitespace-nowrap">
                         <a href="assets/cv/Stefan_Trajkovski_CV.pdf" download class="inline-block w-full h-full">Download CV</a>
                     </button>
                 </div>
@@ -186,9 +186,9 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
                                             </svg>
                                         </a>
-                                        <a href="contact.html" class="group relative flex items-center justify-center gap-2 px-8 py-2 md:px-10 md:py-3 rounded-full border-2 border-teal-600 text-teal-600 hover:bg-teal-600 hover:text-white transition-all duration-300">
-                                            <span class="transform group-hover:-translate-x-2 transition-transform duration-300 text-sm md:text-base">Contact Me</span>
-                                            <svg class="w-4 h-4 md:w-5 md:h-5 absolute right-5 transform translate-x-4 opacity-0 group-hover:translate-x-0 group-hover:opacity-100 transition-all duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <a href="contact.html" class="group inline-flex items-center gap-2 px-6 py-2 md:px-8 md:py-3 rounded-full border-2 border-teal-600 text-teal-600 hover:bg-teal-600 hover:text-white transition-all duration-300">
+                                            <span class="text-sm md:text-base whitespace-nowrap">Contact Me</span>
+                                            <svg class="w-4 h-4 md:w-5 md:h-5 transition-all duration-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                                             </svg>
                                         </a>
