--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
         body {
             font-family: 'Poppins', sans-serif;
         }
-        /* cSpell:disable */
         .gradient-text {
             background: linear-gradient(120deg, #0d9488, #0f766e);
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
-        /* cSpell:enable */
         .animate-float {
             animation: float 6s ease-in-out infinite;
         }
