--- a/qr.html
+++ b/qr.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code - Stefan Trajkovski</title>
+    <link rel="icon" type="image/png" href="assets/ST_Logo_Initials.png" sizes="48x48">
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="tailwind.config.js"></script>
@@ -22,9 +23,9 @@
 
     <!-- QR Code Section -->
     <main class="pt-16">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-20 relative min-h-screen">
-            <div class="flex flex-col items-center justify-center">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-8">Scan to Visit My Portfolio</h1>
+        <div class="relative px-4 py-8 mx-auto max-w-7xl min-h-screen sm:px-6 lg:px-8 md:py-20">
+            <div class="flex flex-col justify-center items-center">
+                <h1 class="mb-8 text-3xl font-bold text-gray-800 md:text-4xl">Scan to Visit My Portfolio</h1>
                 <div id="qrcode" class="p-4 bg-white rounded-lg shadow-lg"></div>
                 <p class="mt-4 text-gray-600">Scan this QR code with your phone's camera to visit my portfolio website</p>
             </div>
