added image when linked is shared

--- a/qr.html
+++ b/qr.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="QR Code - Stefan Trajkovski">
+    <meta property="og:description" content="Scan my QR code to connect with me and explore my portfolio.">
+    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/social-preview.svg">
+    <meta property="og:url" content="https://portfolio-website-eosin-rho.vercel.app/qr">
+    <meta property="og:type" content="website">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <title>QR Code - Stefan Trajkovski</title>
     <link rel="icon" type="image/png" href="assets/ST_Logo_Initials.png" sizes="48x48">
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
