--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Contact - Stefan Trajkovski">
     <meta property="og:description" content="Get in touch with me for your web development and software engineering needs.">
-    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/social-preview.svg">
+    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/ST_shared_link.png">
     <meta property="og:url" content="https://portfolio-website-eosin-rho.vercel.app/contact">
     <meta property="og:type" content="website">
     <meta property="og:image:width" content="1200">
