--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Projects - Stefan Trajkovski">
     <meta property="og:description" content="Check out my latest projects in web development, software engineering, and more.">
-    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/social-preview.svg">
+    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/ST_shared_link.png">
     <meta property="og:url" content="https://portfolio-website-eosin-rho.vercel.app/projects">
     <meta property="og:type" content="website">
     <meta property="og:image:width" content="1200">
