--- a/qr.html
+++ b/qr.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="QR Code - Stefan Trajkovski">
     <meta property="og:description" content="Scan my QR code to connect with me and explore my portfolio.">
-    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/social-preview.svg">
+    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/ST_shared_link.png">
     <meta property="og:url" content="https://portfolio-website-eosin-rho.vercel.app/qr">
     <meta property="og:type" content="website">
     <meta property="og:image:width" content="1200">
