--- a/index.html
+++ b/index.html
@@ -3,14 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Primary Meta Tags -->
+    <title>Stefan Trajkovski - Portfolio</title>
+    <meta name="title" content="Stefan Trajkovski - Portfolio">
+    <meta name="description" content="Welcome to my portfolio website. Explore my projects and services in web development and software engineering.">
+
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Stefan Trajkovski - Portfolio">
+    <meta property="og:site_name" content="Stefan Trajkovski">
     <meta property="og:description" content="Welcome to my portfolio website. Explore my projects and services in web development and software engineering.">
-    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/ST_shared_link.png">
-    <meta property="og:url" content="https://portfolio-website-eosin-rho.vercel.app/">
+    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/preview.svg">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://portfolio-website-eosin-rho.vercel.app/">
+    <meta property="og:image:secure_url" content="https://portfolio-website-eosin-rho.vercel.app/assets/preview.svg">
+    <meta property="og:image:type" content="image/svg+xml">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <title>Stefan Trajkovski - Portfolio</title>
+    <meta property="og:image:alt" content="Stefan Trajkovski Portfolio Preview">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://portfolio-website-eosin-rho.vercel.app/">
+    <meta name="twitter:title" content="Stefan Trajkovski - Portfolio">
+    <meta name="twitter:description" content="Welcome to my portfolio website. Explore my projects and services in web development and software engineering.">
+    <meta name="twitter:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/preview.svg">
+    <meta name="twitter:image:alt" content="Stefan Trajkovski Portfolio Preview">
+    
     <link rel="icon" type="image/png" href="assets/ST_Logo_Initials.png" sizes="48x48">
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -233,19 +252,6 @@
                     <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <i class="mb-4 text-4xl text-blue-500 fab fa-css3-alt"></i>
                         <h4 class="font-semibold">CSS3</h4>
-                    </div>
-                    <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
-                        <svg class="mx-auto mb-4 w-12 h-12" viewBox="0 0 54 33" fill="none">
-                            <g clip-path="url(#prefix__clip0)">
-                                <path fill="#38bdf8" fill-rule="evenodd" d="M27 0c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.054.513 3.522 2.004 5.147 3.653C30.744 13.09 33.808 16.2 40.5 16.2c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C36.756 3.11 33.692 0 27 0zM13.5 16.2C6.3 16.2 1.8 19.8 0 27c2.7-3.6 5.85-4.95 9.45-4.05 2.054.514 3.522 2.004 5.147 3.653C17.244 29.29 20.308 32.4 27 32.4c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C23.256 19.31 20.192 16.2 13.5 16.2z" clip-rule="evenodd"/>
-                            </g>
-                            <defs>
-                                <clipPath id="prefix__clip0">
-                                    <path fill="#fff" d="M0 0h54v32.4H0z"/>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                        <h4 class="font-semibold">TailwindCSS</h4>
                     </div>
                     <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
                         <svg class="mx-auto mb-4 w-12 h-12" viewBox="0 0 630 630" fill="none">
