--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Stefan Trajkovski - Portfolio</title>
     <meta name="description" content="Stefan Trajkovski - Portfolio Website">
-    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/preview-image.svg">
+    <meta property="og:image" content="https://portfolio-website-eosin-rho.vercel.app/assets/ST_shared_link.png">
     <meta property="og:title" content="Stefan Trajkovski">
     <meta property="og:description" content="Portfolio Website">
     <meta property="og:url" content="https://portfolio-website-eosin-rho.vercel.app">
