--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@
                         <i class="fab fa-php text-4xl text-[#4F5B93] mb-4"></i>
                         <h4 class="font-semibold">PHP/Laravel</h4>
                     </div>
+                    <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
+                        <img src="assets/svg/python-logo.svg" alt="Python logo" class="mx-auto mb-4 w-12 h-12">
+                        <h4 class="font-semibold">Python</h4>
+                    </div>
                 </div>
             </div>
         </div>
