--- a/index.html
+++ b/index.html
@@ -238,22 +238,19 @@
                 <h3 class="mb-12 text-2xl font-bold text-center text-gray-800 md:text-3xl">Technologies I Work With</h3>
                 <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
                     <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
-                        <i class="mb-4 text-4xl text-orange-500 fab fa-html5"></i>
+                        <img src="assets/svg/html5-logo.svg" alt="HTML5 logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">HTML5</h4>
                     </div>
                     <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
-                        <i class="mb-4 text-4xl text-blue-500 fab fa-css3-alt"></i>
+                        <img src="assets/svg/css3-logo.svg" alt="CSS3 logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">CSS3</h4>
                     </div>
                     <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
-                        <svg class="mx-auto mb-4 w-12 h-12" viewBox="0 0 630 630" fill="none">
-                            <rect width="630" height="630" fill="#F7DF1E"/>
-                            <path d="M423.2 492.19c12.69 20.72 29.2 35.95 58.4 35.95 24.53 0 40.2-12.26 40.2-29.2 0-20.3-16.1-27.49-43.1-39.3l-14.8-6.35c-42.72-18.2-71.1-41-71.1-89.2 0-44.4 33.83-78.2 86.7-78.2 37.64 0 64.7 13.1 84.2 47.4l-46.1 29.6c-10.15-18.2-21.1-25.37-38.1-25.37-17.34 0-28.33 11-28.33 25.37 0 17.76 11 24.95 36.4 35.95l14.8 6.34c50.3 21.57 78.7 43.56 78.7 93 0 53.3-41.87 82.5-98.1 82.5-54.98 0-90.5-26.2-107.88-60.54zm-209.13 5.13c9.3 16.5 17.76 30.45 38.1 30.45 19.45 0 31.72-7.61 31.72-37.2v-201.3h59.2v202.1c0 61.3-35.94 89.2-88.4 89.2-47.4 0-74.85-24.53-88.81-54.075z" fill="black"/>
-                        </svg>
+                        <img src="assets/svg/javascript-logo.svg" alt="JavaScript logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">JavaScript</h4>
                     </div>
                     <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
-                        <i class="mb-4 text-4xl text-blue-400 fab fa-react"></i>
+                        <img src="assets/svg/react-logo.svg" alt="React logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">React</h4>
                     </div>
                     <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
@@ -265,7 +262,7 @@
                         <h4 class="font-semibold">MySQL</h4>
                     </div>
                     <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
-                        <i class="fab fa-php text-4xl text-[#4F5B93] mb-4"></i>
+                        <img src="assets/svg/php-logo.svg" alt="PHP logo" class="mx-auto mb-4 w-12 h-12">
                         <h4 class="font-semibold">PHP/Laravel</h4>
                     </div>
                     <div class="p-6 text-center bg-white rounded-xl shadow-lg transition-shadow duration-300 hover:shadow-xl">
